--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -21,6 +21,23 @@ nav{
   border-style: solid;
   margin: 1rem;
 }
+li:nth-child(odd) {
+  color: purple;
+}
+li:nth-child(even) {
+  color: gold;
+}
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: orange;
+}
+
+a:hover {
+  font-size: 115%;
+  text-decoration: underline;
+}
 h2{
   color: gold;
   background-color: purple;
@@ -38,9 +55,11 @@ h3{
   padding: .2rem;
   margin: 1rem;
 }
+
 article{
   color: rebeccapurple;
   margin: 1rem;
+  margin-top: 2.5rem;
 }
 img {
   border-style: double;
@@ -49,11 +68,17 @@ img {
   border-color: black;
   margin: 1rem;
   padding: .1rem;
+  margin-bottom: 2rem;
+  /* transition-property: width;
+  transition-delay: .5s;
+  transition-duration: 1.5s; */
+  transition: width 1.5s linear .5s;
+}
+img:hover{
+  width: 115%;
 }
 footer{
-  border-style: solid;
-  border-color: black;
-  border-width: .1rem;
+  border: .1rem solid black;
   margin: 1rem;
   padding: .1rem;
   font-family: "Poor Story", cursive;
